@@ -9,6 +9,8 @@
 #define _STRING_C
 
 #include <types.h>
+#include <mm/mm.h>
+#include <string/string.h>
 
 uint64_t strlen(const char *s){
 	uint64_t i = 0;
@@ -18,6 +20,30 @@ uint64_t strlen(const char *s){
 	}
 	
 	return i;
+}
+
+char *strtrim(const char *s){
+	uint64_t i = 0;
+	uint64_t j;
+	
+	char *tgt;
+	
+	i = strlen(s);
+	
+	j = i - 1;
+	
+	while ((s[j] == ' ') || (s[j] == '\t')){
+		j--;
+	}
+	
+	tgt = kmalloc((j + 2) * sizeof(char));		// +1 for the fact that it's a zero-based index, +1 for the terminator
+	
+	for (i = 0; i <= j; i++){
+		tgt[i] = s[i];
+	}
+	
+	tgt[j + 1] = '\0';
+	return tgt;
 }
 
 #endif
